cmake_minimum_required(VERSION 3.31)
set(CMAKE_CUDA_ARCHITECTURES 75)
set(CMAKE_CUDA_COMPILER "/usr/local/cuda-11.8/bin/nvcc")
project(memory_access_patterns LANGUAGES C CXX CUDA)
enable_language(CUDA)
set(CMAKE_CUDA_STANDARD 20)
add_executable(${PROJECT_NAME} main.cu)
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++20")
